--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(qt-car-dealership VERSION 0.1 LANGUAGES CXX)
+project(car-dealership VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -20,38 +20,39 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(qt-car-dealership
+    qt_add_executable(car-dealership
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         resources/resources.qrc
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET qt-car-dealership APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET car-dealership APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(qt-car-dealership SHARED
+        add_library(car-dealership SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(qt-car-dealership
+        add_executable(car-dealership
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(qt-car-dealership PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(car-dealership PRIVATE Qt${QT_VERSION_MAJOR}::Widgets backend)
+target_include_directories(car-dealership PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/backend)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.qt-car-dealership)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.car-dealership)
 endif()
-set_target_properties(qt-car-dealership PROPERTIES
+set_target_properties(car-dealership PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -60,13 +61,13 @@ set_target_properties(qt-car-dealership PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS qt-car-dealership
+install(TARGETS car-dealership
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(qt-car-dealership)
+    qt_finalize_executable(car-dealership)
 endif()
 add_subdirectory(backend)
