--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(backend
   product_card.h product_card.cpp
   cart.h cart.cpp
   floating_widgets.h floating_widgets.cpp
+  user.cpp
 
 )
 target_link_libraries(backend Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
